--- a/circle.yml
+++ b/circle.yml
@@ -14,6 +14,13 @@ test:
     - docker run -d --name=alpine-jhipster -p 8080:8080 -p 3000:3000 -p 3001:3001 -p 4022:22 -w /home/jhipster/jhipster-sample-app/ typhoon51280/alpine-jhipster mvn spring-boot:run ; sleep 120
     - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
 
+# deployment:
+#   dockerhub:
+#     branch: master
+#     commands:
+#       - docker login --email=$DOCKER_EMAIL --username=$DOCKER_USERNAME --password=$DOCKER_PASSWORD
+#       - docker push typhoon51280/alpine-jhipster
+
   # Version of ruby to use
   # ruby:
   #   version:
